I fixed a typo on the homepage.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ title: Welcome
             </li>
             <li>
                 <article>
-                    <h5><June 19, 2012</h5>
+                    <h5>June 19, 2012</h5>
                     <p><strong>Day of .NET</strong></p>
                     <p>
                         I will be attending the annual Phoenix Day of .NET with
