I fixed an error on the About Me page.

--- a/about-me.html
+++ b/about-me.html
@@ -30,7 +30,7 @@ title: About Me
                 <li><strong>NONSTOP Solutions, Inc.</strong> - San Francisco, CA</li>
                 <li><strong>PeopleSoft, Inc.</strong> - Pleasanton, CA</li>
                 <li><strong>Quantal International, Inc.</strong> - Berkeley, CA</li>
-                <li><strong>Healthcare Information Services, Inc.</strong> - Oakland, CA</li>
+                <li><strong>Healthcare Information Services, Inc.</strong> - Sacramento, CA</li>
             </ul>
         </div>
         <div>
