I changed the content on the homepage.
I updated the list of events that are displayed on the homepage.

--- a/index.html
+++ b/index.html
@@ -35,48 +35,41 @@ title: Welcome
         <ul class="unstyled">
             <li>
                 <article>
-                    <h5>May 22, 2012</h5>
-                    <p><strong><a href="www.nwvdnug.org">Northwest Valley .NET User Group</a></strong></p>
+                    <h5>September 25-27</h5>
+                    <p><strong>Irvine, CA</strong></p>
                     <p>
-                        I will be attending the monthly meeting of the Northwest Valley
-                        .NET User Group. The subject of the month is looking at the new
-                        ASP.NET REST API included in ASP.NET MVC4. Matt Johnson will be
-                        presenting.
+                        I will be at the Neudesic corporate office. If you are with Neudesic, have questions or interests about Neuron and the future of ESB technologies, please feel free to come by and say hello.
+                    </p>
+                </article>
+            <li>
+                <article>
+                    <h5>October 19-21</h5>
+                    <p><strong><a href="http://phoenix.startupweekend.org">Startup Weekend Phoenix</a></strong></p>
+                    <p>
+                        I will be attending Startup Weekend in Phoenix. If you have never done a Startup Weekend, this is a great event. Over a 54 hour time period, you can team up with others on the next great idea. The concept of the event is to drive to a minimum viable product, and maybe, just maybe, create a new startup company.
                     </p>
                 </article>
             </li>
             <li>
                 <article>
-                    <h5>May 23-25, 2012</h5>
-                    <p><strong>San Diego, CA</strong></p>
-                    <p>Travelling for Neudesic</p>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <h5>June 14, 2012</h5>
-                    <p><strong><a href="http://www.pcsug.org">Phoenix Connected Systems User Group</a></strong></p>
+                    <h5>October 23-25</h5>
+                    <p><strong>Irvine, CA</strong></p>
                     <p>
-                        Glenn Block of Microsoft will be presenting on Node.js with Windows
-                        Azure.
+                        I will be at the Neudesic corporate office. If you are with Neudesic, have questions or interests about Neuron and the future of ESB technologies, please feel free to come by and say hello.
                     </p>
                 </article>
-            </li>
             <li>
                 <article>
-                    <h5>June 19, 2012</h5>
-                    <p><strong>Day of .NET</strong></p>
+                    <h5>November 17, 2012</h5>
+                    <p><strong><a href="http://nov2012.desertcodecamp.com">Desert Code Camp 2012</a></strong></p>
                     <p>
-                        I will be attending the annual Phoenix Day of .NET with
-                        Scott Guthrie and Scott Hanselman in Scottsdale.
+                        I will be attending and presenting at Desert Code Camp at the Chandler-Gilbert Community College campus. This is a great community event and is absolutely free to attend. I will be presenting the following sessions:
                     </p>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <h5>June 22-28, 2012</h5>
-                    <p><strong>Huntington Beach, CA</strong></p>
-                    <p>VACATION!!!</p>
+                    <ul>
+                        <li><a href="http://nov2012.desertcodecamp.com/session/536">Building Windows Azure Applications with Node.js</a></li>
+                        <li><a href="http://nov2012.desertcodecamp.com/session/474">iOS Web Service Programming</a></li>
+                        <li><a href="http://nov2012.desertcodecamp.com/session/473">Command-Line Development</a></li>
+                    </ul>
                 </article>
             </li>
         </ul>
