I changed the site's branding to "The Imaginary Road."

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Welcome
 ---
 <div class="hero-unit">
-    <h1>Michael Collins on GitHub</h1>
+    <h1>{{site.brand}}</h1>
     <p>Source code and technical thoughts from the mind of Michael Collins</p>
 </div>
 <p>
