--- a/index.html
+++ b/index.html
@@ -35,29 +35,31 @@ title: Welcome
         <ul class="unstyled">
             <li>
                 <article>
-                    <h5>September 25-27</h5>
-                    <p><strong>Irvine, CA</strong></p>
-                    <p>
-                        I will be at the Neudesic corporate office. If you are with Neudesic, have questions or interests about Neuron and the future of ESB technologies, please feel free to come by and say hello.
-                    </p>
-                </article>
-            <li>
-                <article>
-                    <h5>October 19-21</h5>
-                    <p><strong><a href="http://phoenix.startupweekend.org">Startup Weekend Phoenix</a></strong></p>
-                    <p>
-                        I will be attending Startup Weekend in Phoenix. If you have never done a Startup Weekend, this is a great event. Over a 54 hour time period, you can team up with others on the next great idea. The concept of the event is to drive to a minimum viable product, and maybe, just maybe, create a new startup company.
-                    </p>
-                </article>
-            </li>
-            <li>
-                <article>
                     <h5>October 23-25</h5>
                     <p><strong>Irvine, CA</strong></p>
                     <p>
                         I will be at the Neudesic corporate office. If you are with Neudesic, have questions or interests about Neuron and the future of ESB technologies, please feel free to come by and say hello.
                     </p>
                 </article>
+            </li>
+            <li>
+                <article>
+                    <h5>November 7th, 2012</h5>
+                    <p><strong><a href="http://www.pcsug.org">Phoenix Connected Systems User Group</a></strong></p>
+                    <p>
+                        I will be presenting <strong>Introduction to ZeroMQ</strong> at the Phoenix Connected Systems User Group. This user group meets at the Microsoft office near Tempe Town Lake.
+                    </p>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h5>November 13-15, 2012</h5>
+                    <p><strong>Irvine, CA</strong></p>
+                    <p>
+                        I will be at the Neudesic corporate office. If you are with Neudesic, have questions or interests about Neuron and the future of ESB technologies, please feel free to come by and say hello.
+                    </p>
+                </article>
+            </li>
             <li>
                 <article>
                     <h5>November 17, 2012</h5>
