I revised how the page headers are rendered.
I created the page_header.html include file to render the headers for
pages. I revised the index.html, about-me.html, and the blog index.html
file to use the new page header feature.

--- a/about-me.html
+++ b/about-me.html
@@ -1,11 +1,9 @@
 ---
 layout: default
 title: About Me
+header: About Me
+header_description: All of the things that you never wanted to know about me and refused to ask...
 ---
-<div class="hero-unit">
-    <h1>About Me</h1>
-    <p>All the things that you never wanted to know about me and refused to ask...</p>
-</div>
 <div class="row">
     <div class="span8">
         <div>
