--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 ---
 layout: default
 title: Welcome
+header: The Imaginary Road
+header_description: Source code and technical thoughts from the mind of Michael Collins
 ---
-<div class="hero-unit">
-    <h1>{{site.brand}}</h1>
-    <p>Source code and technical thoughts from the mind of Michael Collins</p>
-</div>
 <p>
     Welcome to my GitHub website. The objective of this website is to share
     information about the projects that I am working on, share random code
