--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Welcome
 header: The Imaginary Road
 header_description: Source code and technical thoughts from the mind of Michael Collins
+javascript: homepage
 ---
 <p>
     Welcome to my GitHub website. The objective of this website is to share
@@ -30,48 +31,7 @@ header_description: Source code and technical thoughts from the mind of Michael 
         <div class="page-header">
             <h1>Where I Will Be</h1>
         </div>
-        <ul class="unstyled">
-            <li>
-                <article>
-                    <h5>October 23-25</h5>
-                    <p><strong>Irvine, CA</strong></p>
-                    <p>
-                        I will be at the Neudesic corporate office. If you are with Neudesic, have questions or interests about Neuron and the future of ESB technologies, please feel free to come by and say hello.
-                    </p>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <h5>November 7th, 2012</h5>
-                    <p><strong><a href="http://www.pcsug.org">Phoenix Connected Systems User Group</a></strong></p>
-                    <p>
-                        I will be presenting <strong>Introduction to ZeroMQ</strong> at the Phoenix Connected Systems User Group. This user group meets at the Microsoft office near Tempe Town Lake.
-                    </p>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <h5>November 13-15, 2012</h5>
-                    <p><strong>Irvine, CA</strong></p>
-                    <p>
-                        I will be at the Neudesic corporate office. If you are with Neudesic, have questions or interests about Neuron and the future of ESB technologies, please feel free to come by and say hello.
-                    </p>
-                </article>
-            </li>
-            <li>
-                <article>
-                    <h5>November 17, 2012</h5>
-                    <p><strong><a href="http://nov2012.desertcodecamp.com">Desert Code Camp 2012</a></strong></p>
-                    <p>
-                        I will be attending and presenting at Desert Code Camp at the Chandler-Gilbert Community College campus. This is a great community event and is absolutely free to attend. I will be presenting the following sessions:
-                    </p>
-                    <ul>
-                        <li><a href="http://nov2012.desertcodecamp.com/session/536">Building Windows Azure Applications with Node.js</a></li>
-                        <li><a href="http://nov2012.desertcodecamp.com/session/474">iOS Web Service Programming</a></li>
-                        <li><a href="http://nov2012.desertcodecamp.com/session/473">Command-Line Development</a></li>
-                    </ul>
-                </article>
-            </li>
+        <ul id="events" class="unstyled">
         </ul>
         <div class="page-header">
             <h1>From Twitter</h1>
