I created the new homepage layout and revised the normal theme.
I created a new homepage for the website. I updated the theme to
display the homepage correctly.

--- a/index.html
+++ b/index.html
@@ -1,70 +1,5 @@
 ---
-layout: default
-title: Welcome
-header: The Imaginary Road
-header_description: Source code and technical thoughts from the mind of Michael Collins
+layout: homepage
 javascript: homepage
+alert: I am currently in the process of updating the website. Some links, categories, and pages may not work. I sincerely apologize in advance for any inconvenience. Please check back soon and the remaining links should be working. Thank you for your interest in my blog.
 ---
-<p>
-    Welcome to my GitHub website. The objective of this website is to share
-    information about the projects that I am working on, share random code
-    samples that I have been inspired to create for one reason or another, or
-    to dive deep into technical topics that I am interested in. Please feel
-    free to look around, play with the code samples, and contribute in any
-    way that you see fit. In my work as a professional software developer,
-    I generate a lot of code on most days and hopefully some of it will be
-    of interest to you and help you out in your own projects.
-</p>
-<div class="row">
-    <div class="span8">
-        <div class="page-header">
-            <h1>Recent Updates</h1>
-        </div>
-        <ul class="unstyled">
-            {% for post in site.posts limit:5 %}
-            {% include post_summary.html %}
-            {% endfor %}
-        </ul>
-        <p><a href="/blog">See more posts</a></p>
-    </div>
-    <div class="span4">
-        <div class="page-header">
-            <h1>Where I Will Be</h1>
-        </div>
-        <ul id="events" class="unstyled">
-        </ul>
-        <div class="page-header">
-            <h1>From Twitter</h1>
-        </div>
-        <div>
-            <script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
-            <script>
-                new TWTR.Widget({
-                    version: 2,
-                    type: 'profile',
-                    rpp: 10,
-                    interval: 30000,
-                    width: 300,
-                    height: 300,
-                    theme: {
-                        shell: {
-                            background: '#cccccc',
-                            color: '#000000'
-                        },
-                        tweets: {
-                            background: '#000000',
-                            color: '#ffffff',
-                            links: '#4aed05'
-                        }
-                    },
-                    features: {
-                        scrollbar: false,
-                        loop: false,
-                        live: true,
-                        behavior: 'all'
-                    }
-                }).render().setUser('mfcollins3').start();
-            </script>
-        </div>
-    </div>
-</div>
