--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ javascript: homepage
 featuredCategoryTitle: ZeroMQ
 featuredCategoryUrl: /blog/zeromq/index.html
 ---
-{% assign featuredCategory = site.categories.zeromq %}
+{% assign featuredCategory = site.categories.ZeroMQ %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
