I forgot to fix the header content for the 404 page.

--- a/404.html
+++ b/404.html
@@ -22,10 +22,8 @@
         <header>
             <div class="container">
                 <div class="hero-unit">
-                    <h1>{{page.header}}</h1>
-                    {% if page.header_description %}
-                    <p>{{page.header_description}}</p>
-                    {% endif %}
+                    <h1>The Imaginary Road</h1>
+                    <p>A problem occurred with the page that you requested.</p>
                 </div>
             </div>
         </header>
