I changed the Neuron ESB category to Neuron_ESB
I changed the name of the Neuron ESB category. I added filters for the
list of categories to replace the underscore with a space in the
category names. I created the index.html page for the Neuron ESB
category.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ featuredCategoryUrl: /blog/zeromq/index.html
 					<ul class="unstyled">
 						{% for category in site.categories %}
 						{% assign categoryName = category | first %}
-						<li><a href="/blog/{{categoryName | cgi_escape}}/index.html">{{categoryName}}</a></li>
+						<li><a href="/blog/{{categoryName | cgi_escape}}/index.html">{{categoryName | replace:'_',' '}}</a></li>
 						{% endfor %}
 					</ul>
 				</aside>
