I further refactored the homepage and post template.
I did more layout refactoring to the website homepage and the template
for blog posts. I worked on the jumbotron CSS style to implement the
blueprint grid pattern.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@ javascript: homepage
 	</head>
 	<body id="homepage">
         {% include navigation_bar.html %}
+        <div id="jumbotron">
+        	<div class="container">
+        		<h1>The Imaginary Road</h1>
+        		<p>
+        			Welcome to The Imaginary Road. The Imaginary Road is the personal blog and website of Michael Collins. On this site, I will be posting about some of the projects that I am developing and general technical ideas and experiments that come to me.
+        		</p>
+        	</div>
+        </div>
 		<div class="container">
 			<div class="row">
 				<div class="span8">
