I added an alert to the homepage while I am making changes to the website.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ javascript: homepage
         	</div>
         </div>
 		<div class="container">
+			<div class="alert">
+				<p>
+					<strong>Warning!</strong>
+					I am in the process of making upgrades and changes to this website. Some links may not work while I am rolling out the content and other structural updates. I apologize in advance and appreciate your patience.
+				</p>
+			</div>
 			<div class="row">
 				<div class="span8">
 					<section id="featuredPost">
