I created the category pages.
I created summary pages for the categories. I updated the posts with
categories that were missing them.

--- a/events.html
+++ b/events.html
@@ -17,7 +17,7 @@ published_time: 2013-04-17
 javascript: events
 ---
 <h1>Upcoming Events</h1>
-<p>
+<p class="lead">
 	The calendar below shows my schedule and upcoming events that I am either attending or would like you to know about.
 </p>
 <div id="eventsCalendar"></div>
