I rebuilt the About Me page.
I integrated TimelineJS into the website and replaced the About Me page
with a timeline showing my career and major life events.

--- a/about-me.html
+++ b/about-me.html
@@ -3,7 +3,9 @@ layout: default
 title: About Me
 header: About Me
 header_description: All of the things that you never wanted to know about me and refused to ask...
+javascript: aboutme
 ---
+<!--
 <div class="row">
     <div class="span8">
         <div>
@@ -130,3 +132,6 @@ header_description: All of the things that you never wanted to know about me and
         </p>
     </div>
 </div>
+-->
+<div id="my-timeline"></div>
+<script type="text/javascript" src="/javascript/TimelineJS/storyjs-embed.js"></script>
