I removed the tree and replaced it with a navigation list.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ javascript: homepage
 					</section>
 					<section>
 						<h4>Blog</h4>
-						<div id="categoryTree"></div>
+						{% include category_list.html %}
 					</section>
 				</div>
 				<div class="span8" data-spy="scroll" data-target="#sectionList">
