I integrated the Cerulean theme from Bootswatch into the normal website theme.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@ javascript: homepage
 	</head>
 	<body id="homepage">
         {% include navigation_bar.html %}
-        <div id="jumbotron">
-        	<div class="container">
-        		<h1>The Imaginary Road</h1>
-        		<p>{{page.description}}</p>
-        	</div>
-        </div>
+        <header class="hero-unit">
+        	<h1>The Imaginary Road</h1>
+        	<p>{{page.description}}</p>
+        </header>
 		<div class="container">
 			<div class="row">
 				<div class="span4">
