Fix blog link at bottom of index.html
I fixed the blog link at the bottom of index.html. It was pointing to
/blogs and not /blog.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ description: The Imaginary Road is the personal blog of Michael Collins. My blog
 					{{post.content}}
 					<footer>
 						<p><a href="{{post.url}}#disqus_thread">Comments</a></p>
-						<p><a href="/blogs">Read more blog posts</a></p>
+						<p><a href="/blog">Read more blog posts</a></p>
 					</footer>
 				</article>
 			</section>
