Make page header on homepage
I changed the style of the "Latest Post" header into a page header.
This makes the page look better.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ description: The Imaginary Road is the personal blog of Michael Collins. My blog
 
 		<div class="container">
 			<section>
-				<header>
+				<header class="page-header">
 					<h1>Latest Post</h1>
 				</header>
 
