Published Death to Static Websites blog post
I wrote Death to Static Websites as a blog post showing how to use CORS
and a web API to make static websites more dynamic.

I modified the website to be able to support post-specific JavaScript.

I updated Gruntfile.coffee to compile CoffeeScript files into
JavaScript.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ description: The Imaginary Road is the personal blog of Michael Collins. My blog
 					<header class="page-header">
 						<h1>Recent Posts</h1>
 					</header>
-					
+
 					{% for post in site.posts offset:1 limit:5 %}
 					<article>
 				    <header>
@@ -72,6 +72,9 @@ description: The Imaginary Road is the personal blog of Michael Collins. My blog
 
 		{% include footer.html %}
     {% include javascript.html %}
+		{% if post.javascript %}
+		<script type="text/javascript" src="/js/{{post.javascript}}.js"></script>
+		{% endif %}
     {% include disqus_comment_count_javascript.html %}
 	</body>
 </html>
