Add Warning Alert
I added a warning alert to the homepage to let prospective readers know
that the site is undergoing maintenance.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 ---
 layout: homepage
 ---
+<div class="alert alert-warning">
+  <p>
+    <strong>December 29, 2018</strong>
+  </p>
+  <p>
+    Please excuse the mess. I haven't blogged in a long time and I'm in the
+    process of modernizing this website in order to start blogging again.
+    Please come back soon if you were looking for content on this site, or
+    feel free to read the raw content on the
+    <a href="https://github.com/mfcollins3/mfcollins3.github.com">GitHub repository</a>
+    for this website.
+  </p>
+  <p>
+    I apologize for any inconvenience.
+  </p>
+</div>
 <div id="latest-story">
   <header>
     <h1>Latest Article</h1>
