--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@ featured_category:
   category: windows_development
   title: Windows Development
 ---
-<div class="alert alert-warning">
-  <p>
-    <strong>December 29, 2018</strong>
-  </p>
-  <p>
-    Please excuse the mess. I haven't blogged in a long time and I'm in the
-    process of modernizing this website in order to start blogging again.
-    Please come back soon if you were looking for content on this site, or
-    feel free to read the raw content on the
-    <a href="https://github.com/mfcollins3/mfcollins3.github.com">GitHub repository</a>
-    for this website.
-  </p>
-  <p>
-    I apologize for any inconvenience.
-  </p>
+<div id="home-jumbotron" class="jumbotron jumbotron-fluid">
+  <div class="img"></div>
+  <div class="container">
+    <h1 class="display-4">The Imaginary Road</h1>
+    <p class="lead">
+      Thoughts, opinions, and other writings from the mind of Michael F. Collins, III.
+    </p>
+  </div>
 </div>
