deploy: mfcollins3/website@aac640a9c8537205209330c5e26315f28cae548f

--- a/year/index.html
+++ b/year/index.html
@@ -17,14 +17,14 @@ if (!doNotTrack) {
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="Categories" />
+    <meta property="og:title" content="Year" />
 <meta property="og:description" content="My website and blog about my life, hobbies, and experiences as a professional software developer" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.michaelfcollins3.me/categories/" />
+<meta property="og:url" content="https://www.michaelfcollins3.me/year/" />
 <meta property="og:site_name" content="The Imaginary Road" />
 <link rel="stylesheet" href="/css/normal.min.dce9025ae10380e4cf00fc261795f4db0a5a85c851adca44e419d4ed2d17f4ff.css">
     <link rel="stylehseet" href="/css/syntax.css">
-    <title>Categories - The Imaginary Road</title>
+    <title>Year - The Imaginary Road</title>
 
     <script type='text/javascript'>var _iub = _iub || [];_iub.csConfiguration = {'ccpaAcknowledgeOnDisplay':true,'lang':'en','siteId':1866497,'countryDetection':true,'enableCcpa':true,'cookiePolicyId':33791094, 'banner':{ 'acceptButtonDisplay':true,'customizeButtonDisplay':true,'position':'float-top-center' }};</script><script type='text/javascript' src='//cdn.iubenda.com/cs/iubenda_cs.js' charset='UTF-8' async></script>
     
@@ -38,7 +38,7 @@ if (!doNotTrack) {
     </div>
     <div class="foreground">
         <div class="container-xl">
-            <h1 class="display-4">Categories</h1>
+            <h1 class="display-4">Year</h1>
             <p class="lead">My website and blog about my life, hobbies, and experiences as a professional software developer</p>
         </div>
     </div>
